fix jumping animation bug

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -21,7 +21,18 @@
 
 .home-title {
   display: block;
+  position: relative;
   animation: fadeInFromLeft 1s ease-in-out;
+}
+
+.home-title::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .home-title-mobile {
